# rag-report-gen-example

./: .gitignore  README.md  pyproject.toml  trained_agents_data.pkl  training_data.pkl
knowledge/: 2020_financial_data.md  2021_financial_data.md  2022_financial_data.md  2023_financial_data.md  2024_financial_data.md
src/rag_report_gen/: crew.py  main.py
src/rag_report_gen/config/: agents.yaml  tasks.yaml
src/rag_report_gen/tools/: code_execution_tool.py  weaviate_tool.py
