[project]
name = "rag_report_gen"
version = "0.1.0"
description = "rag-report-gen using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=0.14.0",
    "crewai[tools]>=0.83.0,<1.0.0",
    "weaviate-client>=4.9.6",
]

[project.scripts]
rag_report_gen = "rag_report_gen.main:run"
run_crew = "rag_report_gen.main:run"
train = "rag_report_gen.main:train"
replay = "rag_report_gen.main:replay"
test = "rag_report_gen.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
